--- a/gtk/.config/gtk-2.0/gtkfilechooser.ini
+++ b/gtk/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,11 +1,11 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=570
-GeometryY=312
-GeometryWidth=780
-GeometryHeight=480
+GeometryX=2879
+GeometryY=77
+GeometryWidth=1128
+GeometryHeight=782
 SortColumn=name
 SortOrder=ascending
 StartupMode=recent
