--- a/discord/.config/BetterDiscord/plugins/AssignBadges.config.json
+++ b/discord/.config/BetterDiscord/plugins/AssignBadges.config.json
@@ -8,7 +8,7 @@
             "EARLY_VERIFIED_BOT": false
         },
         "592692593901699072": {
-            "EARLY_VERIFIED_BOT": true
+            "EARLY_VERIFIED_BOT": false
         }
     }
 }
