--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,12 @@
 [submodule "xplr/.config/xplr/plugins/completion"]
 	path = xplr/.config/xplr/plugins/completion
 	url = https://github.com/sayanarijit/completion.xplr
+[submodule "tmux/.tmux/plugins/tpm"]
+	path = tmux/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
+[submodule "tmux/.tmux/plugins/tmux-sensible"]
+	path = tmux/.tmux/plugins/tmux-sensible
+	url = https://github.com/tmux-plugins/tmux-sensible
+[submodule "tmux/.tmux/plugins/tmux"]
+	path = tmux/.tmux/plugins/tmux
+	url = https://github.com/dracula/tmux
