--- a/discord/.config/BetterDiscord/plugins/EditUsers.config.json
+++ b/discord/.config/BetterDiscord/plugins/EditUsers.config.json
@@ -73,6 +73,7 @@
 		},
 		"689118714750435388": {
 			"name": "jepser",
+			"status": "Zeg makker, kokosnoten zijn geen specerijen.",
 			"tag": "fortnite"
 		},
 		"282859044593598464": {
