--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "xplr/.config/xplr/plugins/dual-pane"]
 	path = xplr/.config/xplr/plugins/dual-pane
 	url = https://github.com/sayanarijit/dual-pane.xplr
+[submodule "st"]
+	path = st
+	url = https://github.com/dtomvan/st
