--- a/zsh/.config/sheldon/plugins.toml
+++ b/zsh/.config/sheldon/plugins.toml
@@ -36,13 +36,13 @@ apply = ["defer"]
 github = 'sindresorhus/pure'
 use = ['async.zsh', 'pure.zsh']
 
-[plugins.fzf]
-github = 'unixorn/fzf-zsh-plugin'
-apply = ["defer"]
+# [plugins.fzf]
+# github = 'unixorn/fzf-zsh-plugin'
+# apply = ["defer"]
 
-[plugins.sd]
-github = "ianthehenry/sd"
-apply = ["defer"]
+# [plugins.sd]
+# github = "ianthehenry/sd"
+# apply = ["defer"]
 
 # use = ["{{ name }}.zsh"]
 
