--- a/wayland/.config/hypr/hyprland.conf
+++ b/wayland/.config/hypr/hyprland.conf
@@ -20,16 +20,22 @@ monitor=DP-1,1920x1080@74.91,0x0,1
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XDG_CURRENT_DESKTOP=Unity
+env = XDG_CURRENT_DESKTOP,Unity
 env = XCURSOR_SIZE,20
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
-env = QT_QPA_PLATFORMTHEME=qt5ct
-env = QT_QPA_PLATFORM=wayland;xcb
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION=1
+# deprecated
+# env = WLR_NO_HARDWARE_CURSORS,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = NVD_BACKEND,direct
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = LIBVA_DRIVER_NAME,nvidia
+env = __EGL_VENDOR_LIBRARY_FILENAMES,/usr/share/glvnd/egl_vendor.d/10_nvidia.json
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -114,6 +120,10 @@ misc {
     key_press_enables_dpms = true
 }
 
+cursor {
+    no_hardware_cursors = true
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -146,6 +156,7 @@ bind = $mainMod,equal, exec,~/.config/hypr/zoom.sh =
 bind = $mainMod,f2, exec, hyprpicker --autocopy
 bind = $mainMod,f3, exec, swww img "$HOME/Pictures/wallpapers/$(/bin/ls -1 ~/Pictures/wallpapers | shuf -n1)" --transition-fps 75 --transition-type wipe
 bind = $mainMod SHIFT,f3, exec, swww img "$(shuf -n1 ~/Pictures/wallpapers/favorites.txt)" --transition-fps 75 --transition-type wipe
+bind = $mainMod CONTROL,f3, exec, swww img -t none "$(shuf -n1 ~/Pictures/wallpapers/favorites.txt)"
 bind = $mainMod,f4,exec,~/.config/hypr/bgfav.sh add
 bind = $mainMod SHIFT,f4,exec,~/.config/hypr/bgfav.sh remove
 bind = $mainMod SHIFT,escape,exec, ~/.config/hypr/lock.sh
@@ -233,6 +244,7 @@ bind=, XF86AudioPlay, exec, playerctl play-pause
 bind=, XF86AudioPrev, exec, playerctl previous
 bind=, XF86AudioNext, exec, playerctl next
 
+exec-once=~/.config/hypr/start-xpdh.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=discord --start-minimized
 exec-once=mako
@@ -244,7 +256,7 @@ exec-once=~/.config/hypr/run-helpers.sh
 exec-once=eww daemon
 exec-once=foot --server
 exec-once=/usr/lib/kdeconnectd
-exec-once=obsidian
+exec-once=~/scripts/open-obsidian.sh
 
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
